Fixed select component CSS + added dashed border for code component

--- a/client/topmate-readme-badge/src/App.css
+++ b/client/topmate-readme-badge/src/App.css
@@ -66,6 +66,7 @@
 .FormContainer__Select{
   margin-block: .625rem;
   font-family: 'Inter', sans-serif;
+  background: transparent;
 }
 
 .FormContainer__CheckboxWrapper{
