--- a/client/topmate-readme-badge/src/App.css
+++ b/client/topmate-readme-badge/src/App.css
@@ -12,7 +12,7 @@
   color: #2F363D;
   font-weight: 700;
   text-align: center;
-  font-family: 'Rubik', sans-serif;
+  font-family: 'Poppins', sans-serif;
 }
 .img_badge{
   margin-top: 3%;
@@ -82,13 +82,13 @@
   margin-top: 5%;
   display: flex;
   flex-direction: row;
+  /* color: #a1a5a8; */
   justify-content: center;
-
 }
 .MainContainer__SubTitle{
   color: #a1a5a8;
   font-family: 'Neucha', cursive;
-  font-weight: bolder;
+  font-weight: bold;
   font-size: 1.125rem;
   margin-top: 1rem;
   text-align: center;
