--- a/client/topmate-readme-badge/src/App.css
+++ b/client/topmate-readme-badge/src/App.css
@@ -2,7 +2,6 @@
   font-family: 'Poppins', sans-serif;
   display: flex;
   flex-direction: column;
-
   justify-content: center;
   align-items: center;
 }
@@ -17,9 +16,8 @@
 .img_badge{
   margin-top: 3%;
   margin-left: 7%;
-   width: 200px;
-   height: 20%;
-
+  width: 200px;
+  height: 20%;
 }
 .head{
   margin-bottom:4px;
@@ -44,22 +42,18 @@
   float: right;
   margin-top: 3%;
   display: flex;
-   flex-direction: row;
+  flex-direction: row;
 }
 .button_topmate{
-
   border-radius: 5px;
   padding: 8px;
-
   margin-right: 10px;
 }
 .button_Container {
  display: flex;
  flex-direction: row;
-
  margin-bottom: 50px;
  margin-top: 50px;
-
  align-items: center;
 }
 .button_postman {
@@ -68,7 +62,6 @@
   padding: 8px;
   color: #FDF2E6;
   margin-right: 10px;
-
 }
 .button_twitter{
   background-color:  #1DA1F2;
@@ -89,7 +82,7 @@
   font-family: 'Neucha', cursive;
   font-weight: bold;
   font-size: 1.125rem;
-  margin-top: 1rem;
+  margin-top: 2px;
   text-align: center;
   display: flex;
   flex-direction: row;
