--- a/client/topmate-readme-badge/src/App.css
+++ b/client/topmate-readme-badge/src/App.css
@@ -118,7 +118,7 @@
   color: #FDF2E6;
   letter-spacing: 0.1em;
   padding:0.75rem .625rem;
-  border-radius: .15rem;
+  border-radius: 5px;
   user-select: none;
   width: 100%;
   text-align: center;
