--- a/client/topmate-readme-badge/src/App.css
+++ b/client/topmate-readme-badge/src/App.css
@@ -125,6 +125,9 @@
   border-radius: 5px;
   user-select: none;
   width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content:center;
   font-weight: bolder;
   text-align: center;
 }
