--- a/client/topmate-readme-badge/src/App.css
+++ b/client/topmate-readme-badge/src/App.css
@@ -11,7 +11,7 @@
   color: #2F363D;
   font-weight: 700;
   text-align: center;
-  font-family: 'Poppins', sans-serif;
+  font-family: 'Gilroy', sans-serif;
 }
 .img_badge{
   margin-top: 3%;
@@ -79,14 +79,15 @@
   margin-top: 5%;
   display: flex;
   flex-direction: row;
+  font-family: 'Gilroy';
   /* color: #a1a5a8; */
   justify-content: center;
 }
 .MainContainer__SubTitle{
   color: #a1a5a8;
-  font-family: 'Neucha', cursive;
+  font-family: 'Gilroy-Regular', cursive;
   font-weight: bold;
-  font-size: 1.125rem;
+  font-size: 16px;
   margin-top: 2px;
   text-align: center;
   justify-content: center;
