Fixed Peerlist title

--- a/client/topmate-readme-badge/src/App.css
+++ b/client/topmate-readme-badge/src/App.css
@@ -85,7 +85,7 @@
 }
 .MainContainer__SubTitle{
   color: #a1a5a8;
-  font-family: 'Gilroy-Regular', cursive;
+  font-family: 'Gilroy', cursive;
   font-weight: bold;
   font-size: 16px;
   margin-top: 2px;
