Fix: Made gitHub buttons mobile responsive

--- a/client/topmate-readme-badge/src/App.css
+++ b/client/topmate-readme-badge/src/App.css
@@ -184,3 +184,9 @@
     align-items: center;
   }
 }
+
+@media screen and (max-width: 400px){
+  .HeaderContainerComponent {
+      flex-direction: column;
+  }
+}
