Fixed the header CSS for mobile view

--- a/client/topmate-readme-badge/src/App.css
+++ b/client/topmate-readme-badge/src/App.css
@@ -159,6 +159,7 @@
     margin-top: 60px;
   }
   .head {
+    margin-top: 4%;
     text-align: center;
     display: flex;
     flex-direction: column;
